<resources>
    <string name="app_name">eco-comerce</string>
    <string name="app_logotipo">Exibindo logotipo da app</string>
    <string name="app_hint_email">Digite o seu E-mail:</string>
    <string name="app_hint_senha">Digite a sua password:</string>
    <string name="app_bt_entrar">Entrar</string>
    <string name="app_txt_esqueceu">Esqueceu sua senha?</string>
    <string name="app_txt_cadastre_se">Cadastre-se</string>
    <string name="app_txtconteudo_scroll">ScrollView contendo conteudo</string>
    <string name="app_txtinfoMain_scroll">Buscar por Categorias</string>
    <string name="app_txtinfoMainMaisVendidos">Mais Vendidos</string>
    <string name="app_txtinfoMelhorCustoBeneficio">Melhor Custo Beneficio</string>
    <string name="app_txtinfoNovidades">Novidades</string>
    <string name="app_bt_pedidos">Pedidos</string>
    <string name="app_bt_comprados">Comprados</string>
    <string name="app_bt_carrinho">Carrinho</string>
    <string name="app_bt_comprar">C\no\nm\np\nr\na\nr</string>
    <string name="app_bt_disponiveis">D\ni\ns\np\no\nn\ni\nv\n.</string>
    <string name="app_bt_vender">V\ne\nn\nd\ne\nr</string>


    <string name="app_bt_popular">Popular</string>
    <string name="app_bt_novo">Novo</string>
    <string name="app_bt_preco_baixo">-Preço</string>
    <string name="app_bt_maisVendido">+Vendido</string>
    <string name="entrar_com_google">Entrar com google</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="todo">TODO</string>
    <string name="bt_float_perfil">Perfil</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>