<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activitys.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_txtconteudo_scroll"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_txtinfoMain_scroll"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:drawableBottomCompat="@drawable/ic_arrow_down_24" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_popular"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_text_redondo"
                    android:text="@string/app_bt_popular"
                    android:textColor="#00796B" />

                <Button
                    android:id="@+id/bt_new"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_text_redondo"
                    android:text="@string/app_bt_novo"
                    android:textColor="#00796B" />

                <Button
                    android:id="@+id/bt_preco_baixo"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_text_redondo"
                    android:text="@string/app_bt_preco_baixo"
                    android:textColor="#00796B" />

                <Button
                    android:id="@+id/bt_maisVendidoo"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_text_redondo"
                    android:text="@string/app_bt_maisVendido"
                    android:textColor="#00796B" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_infonovo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_txtinfoNovidades"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_novidades"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_card_cinza"
                android:scrollbars="horizontal"
                android:verticalScrollbarPosition="right" />

            <TextView
                android:id="@+id/tv_info4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_txtinfoMainMaisVendidos"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_maisvendidos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_card_cinza"
                android:scrollbars="horizontal">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/tv_info3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_txtinfoMelhorCustoBeneficio"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_custoBeneficio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_card_cinza"
                android:scrollbars="horizontal">

            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_pedidos"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_card_cinza"
                    android:text="@string/app_bt_pedidos"
                    android:textColor="#00838F" />

                <Button
                    android:id="@+id/bt_comprados"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_card_cinza"
                    android:text="@string/app_bt_comprados"
                    android:textColor="#00838F" />

                <Button
                    android:id="@+id/bt_carrinho"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_card_cinza"
                    android:text="@string/app_bt_carrinho"
                    android:textColor="#00838F" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>