<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview" />

    <ImageView
        android:id="@+id/imv_planta"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_descricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview" />

    <TextView
        android:id="@+id/tv_descricao2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview" />

    <TextView
        android:id="@+id/tv_preco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview" />

    <Button
        android:id="@+id/bt_comprar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:textColor="#000000"
        tools:ignore="TextContrastCheck" />
</LinearLayout>