<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    android:textDirection="anyRtl"
    tools:context=".Activitys.Central">

    <LinearLayout
        android:id="@+id/layerButtons"
        android:layout_width="54dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:background="@color/green_700"
        android:baselineAligned="false"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/bt_areaComprar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/green_700"
            android:elegantTextHeight="false"
            android:text="@string/app_bt_comprar"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textIsSelectable="false"
            android:textSize="14sp"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/bt_areaDisponiveis"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/green_700"
            android:elegantTextHeight="false"
            android:text="@string/app_bt_disponiveis"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/bt_areaVender"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/green_700"
            android:elegantTextHeight="false"
            android:gravity="center_horizontal"
            android:text="@string/app_bt_vender"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/layerButtons"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/todo" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/todo"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_weight="1"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/icone_arrow_left_24"
            android:clickable="true"
            android:contentDescription="@string/bt_float_perfil"
            android:focusable="true"
            android:minHeight="48dp"
            app:backgroundTint="@color/white"
            app:srcCompat="@drawable/icone_arrow_left_24"
            tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/todo"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. "
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="TextView" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_weight="1"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="TextView"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. "
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="TextView" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>